--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "antd": "^2.9.2",
     "axios": "^0.15.3",
+    "cookies-js": "^1.2.3",
     "cross-env": "^3.2.4",
     "crypto-js": "^3.1.9-1",
     "egg": "^1.0.0-rc.2",
@@ -18,6 +19,7 @@
     "fluent-ffmpeg": "^2.1.2",
     "gm": "^1.23.0",
     "history": "^4.6.1",
+    "jsdom": "^10.1.0",
     "moment": "^2.18.1",
     "mysql": "^2.13.0",
     "react": "^15.5.4",
